# DB-5035-Compressor

./: README.md
source-vst3-aax-projucer-ui-fixes-20260614-194248/: build-vst3.ps1
source-vst3-aax-projucer-ui-fixes-20260614-194248/artifacts-win/DB-5035 Qing Compressor.vst3/Contents/Resources/: moduleinfo.json
source-vst3-aax-projucer-ui-fixes-20260614-194248/vst3-juce/: CMakeLists.txt  DB-5035 Qing Compressor.jucer  MAC_BUILD_NOTES.md  NEXT_SESSION_NOTE.md  README.md
source-vst3-aax-projucer-ui-fixes-20260614-194248/vst3-juce/Source/: DiodeBridgeCompressor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
